crates/flui-objects/tests/snapshots/render_object_harness__harness_snapshot__clip_layer.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
assertion_line: 283
expression: run.snapshot()
---
Offset dx=0.00 dy=0.00
  ClipRect rect=(0.00,0.00 40.00x40.00) clip=antialias
    Picture bounds=(0.00,0.00 40.00x40.00)
      Save
      DrawRect rect=(0.00,0.00 40.00x40.00) fill #0000FFFF
      Restore
