crates/flui-objects/tests/snapshots/render_object_harness__harness_snapshot__decorated_box.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
assertion_line: 259
expression: run.snapshot()
---
Offset dx=0.00 dy=0.00
  Picture bounds=(-4.00,-2.00 92.00x72.00)
    Save
    DrawShadow path_bounds=(2.00,4.00 80.00x60.00) color=#00000080 elev=6.00
    DrawRect rect=(0.00,0.00 80.00x60.00) fill #FFFFFFFF
    DrawDRRect outer=(0.00,0.00 80.00x60.00 r=0.00/0.00/0.00/0.00) inner=(2.00,2.00 76.00x56.00 r=0.00/0.00/0.00/0.00) fill #000000FF
    Restore
