crates/flui-objects/tests/snapshots/render_object_harness__harness_snapshot__lazy_sliver_visible_band.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
assertion_line: 384
expression: snap
---
Offset dx=0.00 dy=0.00
  ClipRect rect=(0.00,0.00 300.00x200.00) clip=hard
    Picture bounds=(0.00,0.00 300.00x450.00)
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,400.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,350.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,300.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,250.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,200.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,150.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,100.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,50.00,0.00,1.00]
      DrawRect rect=(0.00,0.00 300.00x50.00) fill #FF0000FF
