crates/flui-objects/tests/snapshots/render_object_harness__harness_snapshot__opacity_layer.snap
---
source: crates/flui-objects/tests/harness_snapshot.rs
assertion_line: 305
expression: run.snapshot()
---
Offset dx=0.00 dy=0.00
  Opacity alpha=0.50
    Picture bounds=(0.00,0.00 50.00x50.00)
      Save
      DrawRect rect=(0.00,0.00 50.00x50.00) fill #FF0000FF
      Restore
